2003-01-24  John Sullivan  <sullivan@apple.com>

        Reviewed by Trey

        * Misc.subproj/WebNSPasteboardExtras.h:
        * Misc.subproj/WebNSPasteboardExtras.m:
        (+[NSPasteboard _web_setFindPasteboardString:withOwner:]):
	New method to put text on the Find pasteboard.

2003-01-23  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

        * WebView.subproj/WebController.h: Remove unneeded declaration in
	sample code.

2003-01-23  Chris Blumenberg  <cblu@apple.com>

	Made WebTextView use the same format for context menus as the rest of WebKit.
	Implemented "Copy" context menu.

        Reviewed by john.

        * English.lproj/Localizable.strings:
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _menuForElement:]): tweak.
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultContextMenuDelegate contextMenuItemsForElement:defaultMenuItems:]): added "Copy" context menu.
        * WebView.subproj/WebImageView.m:
        (-[WebImageView menuForEvent:]): added asserts
        * WebView.subproj/WebTextView.m:
        (-[WebTextView menuForEvent:]): implemented

2003-01-23  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        * WebView.subproj/WebController.m: Add missing static.

2003-01-23  Darin Adler  <darin@apple.com>

        Reviewed by John.

        * Downloads.subproj/WebBinHexDecoder.m: (-[WebBinHexDecoder fileAttributes]):
        * Downloads.subproj/WebMacBinaryDecoder.m: (-[WebMacBinaryDecoder fileAttributes]):
	Use "FinderFlags" instead of "FinderInfo" as appropriate, since these are
	just the Finder flags, not all the Finder info.

        * Downloads.subproj/WebDownloadHandler.m: (-[WebDownloadHandler createFileIfNecessary]):
        * Misc.subproj/WebNSWorkspaceExtras.m: (-[NSWorkspace _web_noteFileChangedAtPath:]):
        * Plugins.subproj/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage openResourceFile]):